--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of12">
@@ -39,7 +39,7 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -57,68 +57,88 @@
   				<article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR SOUP</h1>
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Soups 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
+              <p class="cartNrow">Chicken Soup</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">18 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Topping 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Topping 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Topping 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Noodle 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Noodle 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Noodle 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
 
   					<div class="col-1of3">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Noodle 1</p>
-  						<p class="cartProw">$2</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+  						<img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
   					</div>
+
             <div class="col-1of3">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
-              <p class="cartProw">$2</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="http://placehold.it/210x150" width="210" heigh="150">
+              <p class="cartNrow">Soup 1</p>
+              <p class="cartProw">$2.00</p>
+              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">20 Comments</a>
             </div>
+            <a class="createN" href="donenood.html">FINISH</a>
   				</article>
-          <a class="createN" href="donenood.html">FINISH</a>
+          
   			</div>
 
   		</div>
