--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -39,22 +39,38 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
+
       <article id="content">
   		<div class="grid">
-  			<div class="col-1of2">
-          <img class="menu"src="img/store.jpg" width="350">
+        <div class="col-1of5">
+          <h1 class="cartpage">STORES</h1>
         </div>
 
-        <div class="col-1of2">
-          <h1 class="global">ORIGINAL NOOD RESTAURANT - JOYCE</h1>
-          <p class="contact">Address :<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br>(Lorem ipsum dolor sit amet)<br><br>Phone : (604) 123-4567<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday   12pm - 9pm<br>Wednesday   12pm - 9pm<br>Thursday   12pm - 9pm<br>Friday   12pm - 11pm<br>Satursday   12pm - 11pm<br>Sunday   12pm - 11pm</p>
+  			<div class="col-4of5">
+          <article id="paddingleft">
+          <div class="col-1of2">
+            <img class="contact"src="img/store.jpg" width="300">
+          </div>
+
+          <div class="col-1of2">
+            <p class="cartNrow">ORIGINAL NOOD RESTAURANT - JOYCE</p>
+            <p class="contact">Address :<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br>(Lorem ipsum dolor sit amet)<br><br>Phone : (604) 123-4567<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday   12pm - 9pm<br>Wednesday   12pm - 9pm<br>Thursday   12pm - 9pm<br>Friday   12pm - 11pm<br>Satursday   12pm - 11pm<br>Sunday   12pm - 11pm</p>
+          </div>
+
+          <div class="col-1of2" id="secondstore">
+            <img class="contact"src="img/store.jpg" width="300">
+          </div>
+
+          <div class="col-1of2" id="secondstore">
+            <p class="cartNrow">NEW! NOOD RESTAURANT - DOWNTOWN</p>
+            <p class="contact">Address :<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit<br>(Lorem ipsum dolor sit amet)<br><br>Phone : (604) 123-4567<br><br>Opening hours :<br>Monday   CLOSED<br>Tuesday   12pm - 9pm<br>Wednesday   12pm - 9pm<br>Thursday   12pm - 9pm<br>Friday   12pm - 11pm<br>Satursday   12pm - 11pm<br>Sunday   12pm - 11pm</p>
+          </div>
         </div>
           
-
   		</div>
       </article>
   	</body>
