--- a/Week5_Grids/detailview.html
+++ b/Week5_Grids/detailview.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receipt</title>
+    <title>Detail View</title>
 <!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -43,25 +43,4 @@
 	  			</div>
   			</nav>
   		</header>
-  		<article id="content">
-  			<div class="grid">
-	  			<div class="col-1of5">
-	  				<a class="side" href="cart.html">My Cart</a>
-	          		<a class="side" href="buynow.html">Ordering Method<br>(Dine In)</a>
-	          		<a class="side" href="personalbillinginfo.html">Personal & Billing Information</a>
-	          		<a class="side" href="confirm.html">Confirmation</a>
-	          		<a class="sideonpage" href="">Receipt</a>
-	  			</div>
-
-	  			<div class="col-4of5">
-	  				<article id="paddingleft">
-	  				<h1 class="global">Receipt</h1>
-	  				<p class="pi">NAME : </p>
-	  				</article>	
-	  			</div>
-	  			<a class="conBut" href="index.html">FINISH</a>
-	  		</div>
-  		</article>
-
   	</body>
-</html>
