--- a/Week5_Grids/donenood.html
+++ b/Week5_Grids/donenood.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -39,7 +39,7 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -57,8 +57,9 @@
 	  				<article id="paddingleft">
 		  				<h1 class="global">MY OWN CART NOODLE</h1>
 		  				<div class="col-1of2">
-		  					<img class="menu"src="http://placehold.it/380x300" width="380" heigh="300">
+		  					<img class="menu"src="http://placehold.it/280x300" width="280" height="300">
 		  				</div>
+
 		  				<div class="col-1of2">
 		  					<h2>ORDER DETAIL</h2>
 		  					<div class="col-1of3">
@@ -79,12 +80,13 @@
 		  						<h2>$5.50</h2>
 		  					</div>
 
+
 		  				</div>
 	  				</article>
 	  			</div>
 	  			
   			</div>
-  			<a class="doneNoodBut" href="cart.html">GO TO CART</a>
+  			<a class="doneNoodBut" href="cart.html">ADD TO CART</a>
   			<a class="doneNoodBut" href="choosenoodle.html">CREATE NEW</a>
   		</article>
   	</body>
