--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
        
   			<nav class="header">
@@ -40,24 +40,27 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
-    <article id="content">
-  		<div class="grid">
+
+      <article id="content">
+    		<div class="grid">
     			<div class="col-1of3">
             <div class="rowGlobal">
       				<h1 class="global">NEW STREET SNACK CART NOODLE</h1>
       				<p class = "homepromo">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
-              <a class="addtocart" href="">ADD TO CART</a>
+              <a class="addtocart" href="cart.html">ADD TO CART</a>
             </div>
     			</div>
+
     			<div class="col-1of3">
             <div class="rowGlobal">
-              <img class="home"src="img/bignews1.jpg" width="300" height="300">
+              <img class="home"src="img/bignews1.jpg" width="102%" height="90%">
             </div>
     			</div>
+
     			<div class="col-1of3">
             <div class="rowGlobalsideimage">
               <p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p>
@@ -67,8 +70,9 @@
               <p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p>
             </div>
     			</div>
-    	</div>
-    </article>
+
+      	</div>
+      </article>
 
       <article id="content2">
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
