--- a/Week5_Grids/news.html
+++ b/Week5_Grids/news.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -39,26 +39,32 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
+
       <article id="content">
   		<div class="grid">
   			<div class="col-1of5">
-          <a class="side" href="#news">News</a>
+          <a class="side" href="#news">New Product</a>
           <a class="side" href="#promotion">Promotions</a>
           <a class="side" href="#events">Events</a>
   			</div>
+
   			<div class="col-4of5">
   				<article id="news">
-  					<h1 class="global">NEWS</h1>
+  					<h1 class="global">NEW PRODUCT</h1>
   					<P class="news">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
+            <!-- <a class="about" href="">VIEW DETAILS</a> -->
+            <a class="about" href="cart.html">ADD TO CART</a>
   				</article>
+
   				<article id="promotion">
   					<h1 class="global">PROMOTIONS</h1>
   					<P class="promotion">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
   				</article>
+
   				<article id="events">
   					<h1 class="global">EVENTS</h1>
   					<P class="events">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
