--- a/Week5_Grids/buynow.html
+++ b/Week5_Grids/buynow.html
@@ -33,7 +33,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -58,13 +58,12 @@
 	  				<p><a class="onpage" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
 
-  		<article id="content2">
-  			
+  		<article id="content">
   			<div class="grid">
 	  			<div class="col-1of5">
 	  				<a class="side" href="cart.html">My Cart</a>
@@ -97,10 +96,10 @@
 		  					<form method="post" action="#" id="comments">
 		  						<label for ="form-name">Time:</label>
 								<select>
-								  <option value="volvo"></option>
-								  <option value="saab">4:00pm</option>
-								  <option value="opel">4:30pm</option>
-								  <option value="audi">5:00pm</option>
+								  <option value=""></option>
+								  <option value="">4:00pm</option>
+								  <option value="">4:30pm</option>
+								  <option value="">5:00pm</option>
 								</select>
 		  					</form>
 		  					<a class="buynowBut" href="">NEXT</a>	
