--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -39,7 +39,7 @@
 	  				<p><a class="onpage" href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -69,8 +69,26 @@
 		  					<h3>PRICE</h3>
 		  					<h3>$5.99</h3>
 		  				</div>
-	  				</article>
-  				</div>
+            </article>
+          </div>
+
+          <div class="col-4of5">  
+            <article id="paddingleftNext">
+              <div class="col-2of4">
+                <img class="cart" src="http://placehold.it/150x150" width="150" heigh="150">
+                <h3>Noodle 1</h3>
+                <p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
+              </div>
+
+              <div class="col-1of4">
+                <h3>1</h3>
+              </div>
+
+              <div class="col-1of4">
+                <h3>$5.99</h3>
+              </div>	  				
+            </article>
+          </div>
   			</div>
 
   			<div class="grid">
@@ -90,7 +108,7 @@
   		</article>
   		<article id="content2">
   			<a class="cartBut" href="buynow.html">BUY NOW</a>
-  			<a class="cartBut" href="">BACK TO MENU</a>	
+  			<a class="cartBut" href="menu.html">BACK TO MENU</a>	
   		</article>
   	</body>
 </html>
