--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -39,7 +39,7 @@
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="">LOG IN</a></p>
+	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
@@ -60,7 +60,7 @@
   					<div class="col-1of3" id="menu">
               <img class="menu"src="img/nood1.jpg" width="210" height="150">
   						<p class="cartNrow">Fishball Nood</p>
-  						<p class="cartProw">$9.99</p>
+  						<p class="cartProw">$6.75</p>
               <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">56 Comments</a>
@@ -69,45 +69,45 @@
   					<div class="col-1of3" id="menu">
   						<img class="menu"src="img/nood2.jpg" width="210" height="150">
               <p class="cartNrow">Healthy Nood</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <p class="cartProw">$6.75</p>
+              <p class="cartDrow">Have a balanced meal, 2:1 in vegetables and meat</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="">60 Comments</a>
   					</div>
 
   					<div class="col-1of3" id="menu">
   						<img class="menu"src="img/nood3.jpg" width="210" height="150">
               <p class="cartNrow">Beef Lover</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <p class="cartProw">$6.75</p>
+              <p class="cartDrow">Beef balls, omasum, also with vegetables</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="">48 Comments</a>
   					</div>
             <div class="col-1of3" id="menu">
               <img class="menu"src="img/nood4.jpg" width="210" height="150">
               <p class="cartNrow">Pork Lover</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <p class="cartProw">$6.75</p>
+              <p class="cartDrow">Pig skin, pig's blood, pig intestine and sausage</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="">50 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <img class="menu"src="img/nood5.jpg" width="210" height="150">
               <p class="cartNrow">Vege Nood</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <p class="cartProw">$6.75</p>
+              <p class="cartDrow">Special nood for vegetarians, rice noodle with tomate soup</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="">70 Comments</a>
             </div>
 
             <div class="col-1of3" id="menu">
               <img class="menu"src="img/nood6.jpg" width="210" height="150">
               <p class="cartNrow">Soft Nood</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <p class="cartProw">$6.75</p>
+              <p class="cartDrow">Special nood for who like soft food, different kinds of tofu</p>
               <img class="rating"src="img/star.jpg">
-              <a class="prodcomment" href="">56 Comments</a>
+              <a class="prodcomment" href="">67 Comments</a>
             </div>
           </article>
 
