--- a/Week5_Grids/profile.html
+++ b/Week5_Grids/profile.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receipt</title>
+    <title>Log In</title>
 <!--     <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/grid.css">
@@ -36,32 +36,29 @@
 	  				<p><a href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a class="onpage" href="cart.html">MY CART</a></p>
+	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
-	  				<p><a href="login.html">LOG IN</a></p>
+	  				<p><a class="onpage" href="login.html">Hi, Mary</a></p>
 	  			</div>
   			</nav>
   		</header>
+
   		<article id="content">
   			<div class="grid">
-	  			<div class="col-1of5">
-	  				<a class="side" href="cart.html">My Cart</a>
-	          		<a class="side" href="buynow.html">Ordering Method<br>(Dine In)</a>
-	          		<a class="side" href="personalbillinginfo.html">Personal & Billing Information</a>
-	          		<a class="side" href="confirm.html">Confirmation</a>
-	          		<a class="sideonpage" href="">Receipt</a>
-	  			</div>
+				<div class="col-1of5">
+		      		<a class="sideonpage" href="">Personal Information</a>
+		      		<a class="sideNone" href="">Billing Information</a>
+		      		<a class="sideNone" href="">My Order</a>
+				</div>
 
-	  			<div class="col-4of5">
+				<div class="col-4of5">
 	  				<article id="paddingleft">
-	  				<h1 class="global">Receipt</h1>
-	  				<p class="pi">NAME : </p>
-	  				</article>	
+	  				<h1 class="global">PERSONAL INFORMATION</h1>
+	  				</article>
 	  			</div>
-	  			<a class="conBut" href="index.html">FINISH</a>
 	  		</div>
-  		</article>
-
-  	</body>
+	  	</article>
+	</body>
 </html>
+
