--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -52,7 +52,7 @@
   				</div>
 
   				<div class="col-4of5">
-  					<article id="paddingleft">
+  					<article id="paddingleftNext">
 		  				<div class="col-2of4">
 		  					<h3>CART NOODLE</h3>
 		  					<img class="cart" src="http://placehold.it/150x150" width="150" heigh="150">
