--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -50,14 +50,14 @@
   				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2)</a>
       		<a class="side" href="choosetoppings.html">Step 2:<br>Choose Toppings<br>(Beef Balls - $1.50)</a>
       		<a class="sideonpage" href="choosesoup.html">Step 3:<br>Choose Soup</a>
-      		<a class="sideNone" href="">Done & Review</a>
+      		<a id="selectside4" class="sideNone" href="">Done & Review</a>
   			</div>
 
   			<div class="col-4of5">
   				<article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR SOUP</h1>
   					<div class="col-1of3">
-  						<img class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/soup_chicken.jpg" width="210" heigh="150">
               <p class="cartNrow">Chicken Soup</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -136,7 +136,6 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">20 Comments</a>
             </div>
-            <a class="createN" href="donenood.html">FINISH</a>
   				</article>
           
   			</div>
@@ -144,5 +143,7 @@
   		</div>
 
   		</article>
+      <script src="js/jquery.js"></script>
+      <script src="js/ui.js"></script>
   	</body>
 </html>
