--- a/Week5_Grids/login.html
+++ b/Week5_Grids/login.html
@@ -51,16 +51,42 @@
 				</div>
 
 				<div class="col-4of5">
+					<article id="paddingleft">
 	  				<div class="col-1of2">
-	  					<>SIGN IN<>
+	  					<h2><a class ="signin">EXISTING USER</a></h2>
+	  					<div id="signinpop">
+	  						<form method="post" action="#" id="comments">
+		  						<label  for ="form-name">EMAIL:</label>
+								<input class="login" type="text" id="form-name" name="form-name" placeholder="">
+
+								<label  for ="form-name">PASSWORD:</label>
+								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
+		  					</form>
+		  					<a class="buynowBut" href="">LOG IN</a>
+	  					</div>
 	  				</div>
 	  				
 	  				<div class="col-1of2">
-	  					<>REGRISTER<>
+	  					<h2><a class ="register">NEW USER</a></h2>
+	  					<div id="registerpop">
+	  						<form method="post" action="#" id="comments">
+		  						<label  for ="form-name">EMAIL:</label>
+								<input class="login" type="text" id="form-name" name="form-name" placeholder="">
+
+								<label  for ="form-name">PASSWORD:</label>
+								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
+								<label  for ="form-name">CONFIRM PASSWORD:</label>
+								<input class="login" type="password" id="form-name" name="form-name" placeholder="">
+		  					</form>
+		  					<a class="buynowBut" href="">REGISTER</a>
+	  					</div>
+	  				</div>
 	  				</div>
 	  			</div>
 	  		</div>
 	  	</article>
+	  	<script src="js/jquery.js"></script>
+      	<script src="js/ui.js"></script>
 	</body>
 </html>
 
