--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -48,7 +48,7 @@
   			<div class="grid">
   			<div class="col-1of5">
   				<a class="sideonpage" href="choosenoodle.html">Step 1:<br>Choose Noodle</a>
-          		<a class="sideNone" href="">Step 2:<br>Choose Toppings</a>
+          		<a id="selectside2"class="sideNone" href="">Step 2:<br>Choose Toppings</a>
           		<a class="sideNone" href="">Step 3:<br>Choose Soup</a>
           		<a class="sideNone" href="">Done & Review</a>
   			</div>
@@ -57,7 +57,7 @@
           <article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR NOODLE</h1>
   					<div class="col-1of3">
-              <img class="menu"src="img/noodle_egg.jpg" width="210" height="150">
+              <img id ="unselected" class="menu" src="img/noodle_egg.jpg" width="210" height="150">
               <p class="cartNrow">Egg Noodle</p>
               <p class="cartProw">$2.00</p>
               <p class="cartDrow">Thin Noodle made with flour and eggs</p>
@@ -136,7 +136,6 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
             </div>
-             <a class="createN" href="choosetoppings.html">SAVE AND NEXT</a>
   				</article>
          
   			</div>
@@ -144,5 +143,8 @@
   		</div>
 
   		</article>
+
+      <script src="js/jquery.js"></script>
+      <script src="js/ui.js"></script>
   	</body>
 </html>
