--- a/Week5_Grids/choosetoppings.html
+++ b/Week5_Grids/choosetoppings.html
@@ -49,7 +49,7 @@
   			<div class="col-1of5">
   				<a class="side" href="choosenoodle.html">Step 1:<br>Choose Noodle<br>(Rice Noodle - $2)</a>
       		<a class="sideonpage" href="choosetoppings.html">Step 2:<br>Choose Toppings</a>
-      		<a class="sideNone" href="">Step 3:<br>Choose Soup</a>
+      		<a id="selectside3" class="sideNone" href="">Step 3:<br>Choose Soup</a>
       		<a class="sideNone" href="">Done & Review</a>
   			</div>
 
@@ -57,7 +57,7 @@
   				<article id="cartnoodles">
   					<h1 class="global">CHOOSE YOUR TOPPINGS</h1>
   					<div class="col-1of3">
-  						<img class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
+  						<img id ="unselected" class="menu"src="img/topping_pigblood.jpg" width="210" heigh="150">
               <p class="cartNrow">Pig's Blood</p>
               <p class="cartProw">$1.50</p>
               <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -136,7 +136,6 @@
               <img class="rating"src="img/star.jpg">
               <a class="prodcomment" href="">14 Comments</a>
             </div>
-            <a class="createN" href="choosesoup.html">SAVE AND NEXT</a>
   				</article>
           
   			</div>
@@ -144,5 +143,7 @@
   		</div>
 
   		</article>
+      <script src="js/jquery.js"></script>
+      <script src="js/ui.js"></script>
   	</body>
 </html>
