--- a/Week5_Grids/detailview.html
+++ b/Week5_Grids/detailview.html
@@ -36,11 +36,79 @@
 	  				<p><a href="contact.html">CONTACT</a></p>
 	  			</div>
 	  			<div class="col-3of24">
-	  				<p><a class="onpage" href="cart.html">MY CART</a></p>
+	  				<p><a  href="cart.html">MY CART</a></p>
 	  			</div>
 	  			<div class="col-2of24">
 	  				<p><a href="login.html">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
+
+  		<article id="content">
+  		<div class="grid">
+  			<div class="col-1of5">
+  				<a class="sideonpage" href="#cartnoodles">Cart Noodles</a>
+          		<a class="side" href="#soup">Soup</a>
+          		<a class="side" href="#drinks">Drinks</a>
+          		<a class="side" href="#dessert">Dessert</a>
+  			</div>
+  			<div class="col-4of5">
+  				<article id="paddingleft">
+  					<h1 class="globalDetailview"><img class="ratingdetailview"src="img/star.jpg">Fishball Nood</h1>
+  					
+
+	  				<div class="col-1of2">
+	  					<img class="home"src="img/bignews1.jpg" width="90%" height="90%">
+	  				</div>
+	  				<div class="col-1of2">
+	  					<h3>$6.75</h3>
+	  					<p class="detailview">NOODLE: Egg Noddle</p>
+	  					<p class="detailview">TOPPINGS: Curry Fishball</p>
+	  					<p class="detailview">SOUP: Homemade special</p>
+	  					<p class="detailviewDescription">Description:</p>
+	  					<p class="detailview">This is our new product. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
+	  				</div>
+  				</article>
+  			</div>
+  			<div class="col-4of5">
+  				<article id="paddingleft">
+  					<a class="detailviewaddtocart" href="">ADD TO CART</a>
+
+  					<select class="detailview">
+						<option value="">1</option>
+					  	<option value="">2</option>
+					  	<option value="">3</option>
+					</select>
+					<p class="quantity">QUANTITY:</p>
+  				</article>
+  			</div>
+  			<div class="col-4of5">
+  				<article id="paddingleft">
+  					<h1 class="globalDetailview2">MY COMMENT</h1>
+  					<h3 class="detailview">Rating:</h3>
+  					<img src="img/star.jpg">
+  					<textarea  >Write your comments here...</textarea>
+  					<a class="addtocart">SUBMIT</a>
+
+  				</article>
+  			</div>
+  			<div class="col-4of5">
+  				<article id="paddingleft">
+  					<h1 class="globalDetailview2">OTHER COMMENTS<a class="prodcommentdetailview">(86 comments)</a></h1> 
+  					<div id="othercomments"> 					
+	  					<h3 class="detailview">MARY:</h3>
+	  					<img src="img/star.jpg">
+	  					<p class="othercomment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non orci et magna pretium vehicula eget eget arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris ante augue, auctor a scelerisque sed, bibendum malesuada lorem.</p>
+  					</div>
+
+  					<div id="othercomments"> 					
+	  					<h3 class="detailview">GARY:</h3>
+	  					<img src="img/star.jpg">
+	  					<p class="othercomment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non orci et magna pretium vehicula eget eget arcu. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris ante augue, auctor a scelerisque sed, bibendum malesuada lorem.</p>
+  					</div>
+
+  				</article>
+  			</div>
+  		</div>
+  		</article>
   	</body>
