--- a/Week5_Grids/about.html
+++ b/Week5_Grids/about.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
+  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of24">
@@ -56,14 +56,14 @@
   					<h1 class="global">ABOUT US</h1>
   					<P class="aboutus">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
             <h2>"Experience the cart noodle culture in store and provide the best customer service."</h2>
-            <img src="img/about.jpg" width="688">
+            <img class="about" src="img/about.jpg" width="688">
             <a class="about" href="contact.html">CONTACTS US</a>
   				</article>
 
   				<article id="history">
   					<h1 class="global">HISTORY</h1>
   					<P class="history">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</P>
-            <img src="img/history.jpg">
+            <img class="about" src="img/history.jpg">
             <a class="about" href="news.html">OUR NEWS</a>
   				</article>
   			</div>
