--- a/Week5_Grids/choosesoup.html
+++ b/Week5_Grids/choosesoup.html
@@ -14,7 +14,7 @@
   	<body>
   		<header class="grid">
   			<div class="col-6of24">
-  				<a href="index.html"><img src="img/logo1.jpg" width="225" height="60"></a>
+  				<a href="index.html"><img class="logo" src="img/logo1.jpg" width="225" height="60"></a>
   			</div>
   			<nav class="header">
 	  			<div class="col-2of12">
